Fix - overflow

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     font-family: 'Muli', sans-serif;
     margin: 0;
+    overflow-x: hidden;
     background-color: rgba(255, 99, 71, 0.24)
 }
 
